--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background: url(https://cg-olimpic.pl/wp-content/uploads/2022/05/kids-boxed-background-img_left.jpg) center repeat-y;
+  background: url(https://cg-olimpic.pl/wp-content/uploads/2022/05/kids-boxed-background-img_left.jpg) center top repeat-y;
   height: 100vh;
   width: 100%;
 }
