--- a/src/components/main_form.module.css
+++ b/src/components/main_form.module.css
@@ -19,49 +19,118 @@
     grid-column-gap: 15px;
 }
 
-.sectionForm div {
+.sectionForm__Form {
     background-color: #fff;
     padding-bottom: 20px;
     margin-top: 20px;
+    width: 100%;
 }
-
-.sectionForm div label {
+.sectionForm__Form h3 {
+    margin-bottom: 0;
+}
+.sectionForm__Form label {
     display: block;
-    padding: 0 0 5px 30px;
-    font-size: 15px;
-    margin: 20px  20px 0;
+    width: 100%;
+    padding: 0 0 5px 10px;
+    font-size: 16px;
     text-align: left;
 }
-.sectionForm div select {
-    width: 90%;
-    height: 30px;
-    padding: 1%;
+.sectionForm__Form select {
+    width: 100%;
+    height: 34px;
+    padding: 5px 0;
     margin: 0;
+    font-size: 16px;
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    border: 1px solid;
 }
-.sectionForm div input {
-    width: 90%;
+.sectionForm__Form input {
+    width: 100%;
     height: 20px;
-    padding: 1%;
+    padding: 5px 0;
     margin: 0;
+    font-size: 16px;
+    text-align: center;
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    border: 1px solid;
+}
+.buttonActive {
+    height: 40px!important;
+    margin-top: 15px!important;
+    background-color: #f7c33e!important;
+    font-weight: bold;
 }
 
-.header a {
-    display: block;
-    width: 115px;
-    margin: 5px 0 20px 70px;
+/*Form Alone*/
+.sectionForm__Form__Alone {
+    width: 90%;
+    margin: 20px auto 0 auto;
 }
-.header h1 {
-    font-size: 40px;
-    display: block;
-    padding: 15px 0 0 0;
-    color: #2a2a2a;
+/*--------------------------------*/
+
+/*Form Double*/
+.sectionForm__Form__Double {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap: 20px;
 }
+/*--------------------------------*/
+
+/*Form Double Same*/
+.sectionForm__Form__DoubleSame {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+/*--------------------------------*/
+
+/*Form Triple*/
+.sectionForm__Form__Triple {
+    display: grid;
+    grid-template-columns: 1fr 150px 110px;
+    gap: 20px;
+}
+/*--------------------------------*/
+
+
+
 
 
 
 @media only screen and (max-width: 1360px) {
     .sectionForm, .discription, .container{
         width: 90%;
+    }
+/*Form Double*/
+.sectionForm__Form__Double {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+/*--------------------------------*/
+
+/*Form Double Same*/
+.sectionForm__Form__DoubleSame {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+/*--------------------------------*/
+/*Form Triple*/
+.sectionForm__Form__Triple {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+/*--------------------------------*/
+    
+       
+    .zipCode__child_code {
+        width: 85%!important;
+        text-align: left;
+        
     }
 }
 
@@ -72,7 +141,8 @@
         height: auto;
     }
    
+   
 }
-/* @media only screen and (max-width: 520px) {
-    
-} */
+@media only screen and (max-width: 520px) {
+   
+}
