checking form ready

--- a/src/components/agreement_ready/agreement_section.module.css
+++ b/src/components/agreement_ready/agreement_section.module.css
@@ -1,3 +1,10 @@
+.agreementContainerUnvisible {
+    display: none;
+}
+.agreementContainerVisible {
+    display: block;
+}
+
 .container {
     width: 1356px;
     margin: 0 auto 20px auto;
