--- a/src/components/agreement_ready/agreement_section.module.css
+++ b/src/components/agreement_ready/agreement_section.module.css
@@ -1,12 +1,5 @@
-.agreementContainerUnvisible {
-    display: none;
-}
-.agreementContainerVisible {
-    display: block;
-}
-
 .container {
-    width: 1356px;
+    width: 94%;
     margin: 0 auto 20px auto;
     background-color: cornsilk;
     padding: 15px 0 0 0;
