--- a/src/components/sending/sending.module.css
+++ b/src/components/sending/sending.module.css
@@ -74,23 +74,46 @@ input[type="file"] {
     display: none;
 }
 
+.fileDropDiv label {
+    padding: 0;
+}
+
 .customFileUpload {
     width: 100%;
     height: 50px;
     padding: 5px 0!important;
-    margin: 0;
+    margin: 0!important;
     font-size: 16px;
     text-align: center;
     background-color:bisque;
     border-radius: 5px;
-    border: 3px dotted #000;
+    border: 2px dotted #000;
     cursor: pointer;
     display: flex!important;
     justify-content: center;
     align-items: center;
 }
 
-.customFileUpload span{
-    display: block;
-    text-align: center;
+.buttonActive {
+    height: 64px!important;
+    background-color: #f7c33e!important;
+    font-weight: bold;
+    cursor: pointer;
+}
+.buttonActive:active {
+    background-color: #dbad38!important;
+}
+
+.linkActive {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 62px;
+    
+    background-color:gray!important;
+    font-weight: bold;
+    border: 1px solid #000;
+    border-radius: 5px;
+    text-decoration: none;
+    color: lightgray;
 }
