--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url(https://cg-olimpic.pl/wp-content/uploads/2022/05/kids-boxed-background-img_left.jpg) center top repeat-y fixed;
 }
 
 code {
