--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -5,6 +5,7 @@
     margin: 0 auto 0 auto;
     display: grid;
     grid-template-columns: 1fr;
+    border-bottom: 2px solid #000;;
 }
 .header a {
     display: block;
@@ -16,6 +17,10 @@
     display: block;
     padding: 0px 0 0 0;
     color: #2a2a2a;
+}
+
+.header h2 {
+    color: red;
 }
 
 
