--- a/src/components/bottom.module.css
+++ b/src/components/bottom.module.css
@@ -9,7 +9,7 @@
     color: white;
     font-size: 20px;
     text-align: center;
-    padding: 20px 0 0 0;
+    padding: 20px 20px 0 20px;
 }
 
 @media only screen and (max-width: 1360px) {
