--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -19,10 +19,12 @@
     display: block;
     padding: 0px 0 0 0;
     color: #2a2a2a;
+    padding: 0 20px;
 }
 
 .header h2 {
     color: red;
+    padding: 0 20px
 }
 
 
