--- a/src/components/main_form/main_form.module.css
+++ b/src/components/main_form/main_form.module.css
@@ -1,14 +1,14 @@
 .container {
     width: 1360px;
-    margin: 0 auto;
+    margin: 0 auto 20px auto;
     background-color: #f4f4f4;
     display: grid;
 }
 
 .sectionForm {
-    width: 1360px;
+    width: 1320px;
     background-color: #f4f4f4;
-    margin: 0 auto 15px auto;
+    margin: 0 auto 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 15px;
@@ -19,6 +19,7 @@
     padding-bottom: 20px;
     margin-top: 20px;
     width: 100%;
+    border-radius: 10px;
 }
 .sectionForm__Form h3 {
     margin-bottom: 0;
