--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,7 +2,7 @@
     width: 1360px;
     
     background-color: #fff;
-    background: url(../images/bg3.jpg) top left no-repeat;
+    background: url(../../images/bg3.jpg) top left no-repeat;
     background-size: auto 100%;
     margin: 0 auto 0 auto;
     display: grid;
