--- a/src/components/main_form/main_form.module.css
+++ b/src/components/main_form/main_form.module.css
@@ -34,24 +34,29 @@
 .sectionForm__Form select {
     width: 100%;
     height: 34px;
-    padding: 5px 0;
+    box-sizing: border-box;
     margin: 0;
     font-size: 16px;
     background-color: #f4f4f4;
     border-radius: 5px;
-    border: 1px solid;
+    border: 1px solid #c74137;
 }
+
+
+
 .sectionForm__Form input {
     width: 100%;
-    height: 20px;
-    padding: 5px 0;
+    height: 30px;
     margin: 0;
     font-size: 16px;
     text-align: center;
     background-color: #f4f4f4;
     border-radius: 5px;
-    border: 1px solid;
+    border: 1px solid #c74137;
+    box-sizing: border-box;
 }
+
+
 
 .div__checkbox {
     width: auto;
