--- a/src/components/downloading/step3.module.css
+++ b/src/components/downloading/step3.module.css
@@ -48,6 +48,12 @@
     margin: 0;
 }
 
+p.warning {
+    font-size: 30px;
+    font-weight: bold;
+    color: red;
+}
+
 p.signatures {
     padding: 50px 20px 0 20px!important;
 }
