--- a/src/components/end_page/end_page.module.css
+++ b/src/components/end_page/end_page.module.css
@@ -7,19 +7,26 @@
     display: none;
 }
 
+.image {
+    width: 10%;
+}
+
 .container p {
-    padding: 20px 10px 0 10px;
+    padding: 20px 10px 20px 10px;
+    margin: 0;
     font-size: 30px;
     color: green;
 }
 
 .container p.warning {
+    padding-top: 0;
     font-size: 20px;
     color: darkgreen;
     font-weight: bold;
-    padding-bottom: 30px;
 }
 
 .container span {
+    display: block;
+    padding-top: 30px;
     font-weight: bold;
 }
