--- a/src/components/downloading/step3.module.scss
+++ b/src/components/downloading/step3.module.scss
@@ -25,43 +25,41 @@
 .pageContainer {
     padding: 40px;
     text-align: left;
-}
-.pageContainer h2 {
-    font-size: 16px;
-}
-
-.pageContainer h3 {
-    font-size: 14px;
-}
-
-.pageContainer h4 {
-    font-size: 14px;
-    color: crimson;
-    padding-left: 30px;
-    margin: 20px 0 0 0;
-    text-decoration: underline;
-}
-
-.pageContainer p {
-    font-size: 12px;
-    line-height: 20px;
-    margin: 0;
+    h2 {
+        font-size: 16px;
+    }
+    h3 {
+        font-size: 14px;
+    }
+    h4 {
+        font-size: 14px;
+        color: crimson;
+        padding-left: 30px;
+        margin: 20px 0 0 0;
+        text-decoration: underline;
+    }
+    p {
+        font-size: 12px;
+        line-height: 20px;
+        margin: 0;
+    }
 }
 
-p.warning {
-    font-size: 30px;
-    font-weight: bold;
-    color: red;
-}
-
-p.signatures {
-    padding: 50px 20px 0 20px!important;
-}
-p.signaturesDiscription {
-    padding: 0 20px 20px 20px!important;
-}
-p.signaturesDiscription span {
-    border-top: 3px dotted #000;
+p {
+    &.warning {
+        font-size: 30px;
+        font-weight: bold;
+        color: red;
+    }
+    &.signatures {
+        padding: 50px 20px 0 20px!important;
+    }
+    &.signaturesDiscription {
+        padding: 0 20px 20px 20px!important;
+        span {
+            border-top: 3px dotted #000;
+        }
+    }
 }
 
 .clientSignature {
