small changes in css, changed global  background

--- a/src/components/bottom/bottom.module.scss
+++ b/src/components/bottom/bottom.module.scss
@@ -1,13 +1,13 @@
 .main {
     width: 1360px;
-    height: 100px;
+    
     margin: 0 auto;
     background-color: black;
     p {
         color: white;
         font-size: 20px;
         text-align: center;
-        padding: 20px 20px 0 20px;
+        padding: 10px 20px 5px 20px;
     }
     @media (max-width: 1360px) {
         width: 90%;
