--- a/src/components/instruction/instruction.module.scss
+++ b/src/components/instruction/instruction.module.scss
@@ -3,15 +3,13 @@
     padding: 0 5% 0 5%;
     section {
         width: 95%;
-        padding-left: 5%;
-        padding-top: 20px;
         margin-bottom: 30px;
         border: 2px solid rgb(24, 23, 23);
         border-radius: 10px;
         background-color: rgb(230, 219, 219);
         text-align: start;
         h3 {
-            padding-bottom: 20px;
+            padding: 0 20px 20px 20px;
             font-size: 1.5rem;
             color: darkgreen;
             font-weight: 900;
