--- a/src/components/instruction/instruction.module.scss
+++ b/src/components/instruction/instruction.module.scss
@@ -2,8 +2,8 @@
     width: 90%;
     padding: 0 5% 0 5%;
     section {
-        width: 95%;
-        margin-bottom: 30px;
+        width: 100%;
+        margin: 0 auto 30px auto;
         border: 2px solid rgb(24, 23, 23);
         border-radius: 10px;
         background-color: rgb(230, 219, 219);
