--- a/src/components/steps/steps.module.scss
+++ b/src/components/steps/steps.module.scss
@@ -1,4 +1,11 @@
 .discription {
     width: 90%;
     padding: 0 5% 0 5%;
+    p.warning {
+        
+            font-size: 30px;
+            font-weight: bold;
+            color: red;
+        
+    }
 }
