--- a/src/components/downloading/downloading.module.scss
+++ b/src/components/downloading/downloading.module.scss
@@ -27,9 +27,11 @@
     text-align: left;
     h2 {
         font-size: 16px;
+        text-align: center;
     }
     h3 {
         font-size: 14px;
+        text-align: center;
     }
     h4 {
         font-size: 14px;
