--- a/src/components/downloading/downloading.module.scss
+++ b/src/components/downloading/downloading.module.scss
@@ -49,13 +49,14 @@
 
 p {
     &.signatures {
-        padding: 50px 20px 0 20px!important;
+        padding: 50px 20px 2px 20px!important;
+        span {
+            border-bottom: 3px dotted #000;
+        }
     }
     &.signaturesDiscription {
         padding: 0 20px 20px 20px!important;
-        span {
-            border-top: 3px dotted #000;
-        }
+        
     }
 }
 
